fixed nav spacing, h1, and alert-msg color

--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,31 @@
-h1 { 
-    width: 100%; 
+.h1-container {  
     background: black; 
     color: white; 
-    font-size: 20px; 
-    padding: 10px; 
-    text-align: center;
-    opacity: 0.8; 
-    margin-bottom: 0;  
-    font-weight: bold; 
-}
-nav { 
-    margin: 0 auto; 
+    font-size: 13px; 
+    opacity: 0.8;   
     display: flex; 
     justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;  
+}
+h1 {  
+    margin-left: 45px;
+}
+
+nav {  
+    display: flex; 
+    justify-content: center;
+
+}
+nav ul { 
+    margin-top: 0; 
 }
 nav li { 
     list-style: none; 
     display: inline-block;  
     background-color: #ccc; 
     padding: 7px; 
-    margin: 0; 
+    
+    
 }
 li a { 
     color: white; 
@@ -27,7 +33,7 @@ li a {
     text-decoration: none; 
 }
 .alert-msg { 
-    background-color: rgb(133, 227, 202); 
+    background-color: rgb(142, 252, 213); 
     width: 90%; 
     margin-left: 30px; 
     margin-right: 10px; 
@@ -39,8 +45,11 @@ li a {
     border-bottom: 2px solid yellow; 
 }
 img { 
-    width: 80px; 
-    height: 100px; 
+    width: 140%; 
+    height: 100%;
+}
+#firstImage { 
+    width: 160%; 
 }
 .image-container { 
     display: flex; 
@@ -56,6 +65,7 @@ img {
     width: 100%; 
     padding: 0 30px; 
     text-align: center; 
+    margin: 0 auto;
 }
 footer { 
     background: black; 
